# DQTimeSeriesAnalyzer

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  REFACTORING_REPORT.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: anomalies.py  auth.py  connections.py  dashboard.py  health.py  monitors.py  router.py  series.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/notifications/: webhook.py
backend/app/scheduler/: runner.py
backend/app/schemas/: api.py
backend/app/services/: connections.py  monitors.py  runner.py  scheduling.py  source_postgres.py  sql_safety.py
backend/app/timeseries/: models.py
backend/migrations/: README.md
backend/migrations/versions/: 0001_initial.sql
backend/tests/: conftest.py  test_api_e2e.py  test_scheduler.py  test_sql_safety.py  test_timeseries.py  test_webhook.py
demo-source/: .dockerignore
demo-source/common/: synthetic_orders.py
demo-source/generator/: Dockerfile  generate_demo_data.py
demo-source/init/: 01_schema_and_seed.sql
demo-source/scenario/: Dockerfile  run_monitor_scenario.py
docs/: architecture.md
docs/decisions/: 0001-mvp-scope.md
docs/features/: time-series-models-analysis.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  TimeSeriesChart.tsx  appConfig.ts  appUtils.ts  chartUtils.ts  components.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
(+1 files in other folders)
